--- a/styles.css
+++ b/styles.css
@@ -991,8 +991,8 @@ body {
 .tx-sheet {
   // padding: 24px;
   text-align: center;
-  font-family: 'Inter', sans-serif;
-  margin-top: 50px;
+  // font-family: 'Inter', sans-serif;
+  // margin-top: 50px;
 }
 
 .tx-icon {
