--- a/styles.css
+++ b/styles.css
@@ -325,7 +325,7 @@ body {
   #transition: background-color 0.3s ease;
   #font-size: 16px;
   #font-weight: 600;
-  background-color: transparent;
+  // background-color: transparent;
   #color: #000;
 }
 
