--- a/styles.css
+++ b/styles.css
@@ -1231,7 +1231,7 @@ body {
   color: #FFFFFF;
   margin-top: 2px;
 }
-.mainBalanceCenter {
+#mainBalanceCenter {
   position: absolute;
   top: 50%;
   left: 50%;
