--- a/styles.css
+++ b/styles.css
@@ -1204,6 +1204,7 @@ body {
   /* подвиньте по вертикали */
   margin-top: 0px;
   padding: 0px;
+  padding-top: calc(16px + env(safe-area-inset-top, 0px));
 }
 
 .user-info .user-photo {
