--- a/styles.css
+++ b/styles.css
@@ -98,13 +98,13 @@ body {
   bottom: 0;
   left: 0;
   width: 100%;
-  padding-bottom: 20px;
+  padding: 10px 0;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   background-color: #fff;
   box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.1);
-  
+  z-index: 999999;
 }
 
 #bottomBar button {
@@ -1245,7 +1245,8 @@ body {
       border-top-left-radius: 24px;
       border-top-right-radius: 24px;
       margin-top: 220px;
-      padding: 20px 16px 90px;
+      padding: 20px 16px 80px;
+      min-height: calc(100vh - 220px - 80px);
       box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.05);
     }
 
