--- a/styles.css
+++ b/styles.css
@@ -269,7 +269,7 @@ body {
   width: 100%;
   max-width: 600px;
   margin: 0px auto 0 auto;
-  height: calc(100% - 40px);
+  height: 100%;
   background-color: #fff;
   overflow-y: auto;
   border-radius: 8px;
